--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -22,7 +22,7 @@ COMMON_SOURCES = arg.c array.c bignum.c binary.c bool.c builtins.c class.c \
 DEFAULT_INCLUDES = -I.
 CFLAGS_COMMON = -I$(ROOT_DIR)/include -I$(ONIG_DIR) -I$(BDWGC_DIR)/include \
 		-I$(GMP_DIR) -Wall -DPREFIX=\"$(prefix)\" @CFLAGS_COMMON@
-LDFLAGS_COMMON = -export-dynamic @LDFLAGS_COMMON@
+LDFLAGS_COMMON = @LDFLAGS_COMMON@
 LIBS = $(ONIG_DIR)/.libs/libonig.a $(GMP_DIR)/.libs/libgmp.a -lm @LIBS@
 
 EXTRA_PROGRAMS = yog-bdw$(EXEEXT) yog-copying$(EXEEXT) yog-mark-sweep$(EXEEXT) \
@@ -31,24 +31,24 @@ EXTRA_PROGRAMS = yog-bdw$(EXEEXT) yog-copying$(EXEEXT) yog-mark-sweep$(EXEEXT) \
 bin_PROGRAMS = @BIN_PROGRAMS@
 yog_copying_SOURCES = $(COMMON_SOURCES) gc/copying.c
 yog_copying_CFLAGS = $(CFLAGS_COMMON) -DGC_COPYING
-yog_copying_LDFLAGS = $(LDFLAGS_COMMON)
+yog_copying_LDFLAGS = $(LDFLAGS_COMMON) @LDFLAGS_COPYING@
 yog_mark_sweep_SOURCES = $(COMMON_SOURCES) gc/mark-sweep.c
 yog_mark_sweep_CFLAGS = $(CFLAGS_COMMON) -DGC_MARK_SWEEP
-yog_mark_sweep_LDFLAGS = $(LDFLAGS_COMMON)
+yog_mark_sweep_LDFLAGS = $(LDFLAGS_COMMON) @LDFLAGS_MARK_SWEEP@
 yog_mark_sweep_compact_SOURCES = $(COMMON_SOURCES) gc/mark-sweep-compact.c
 yog_mark_sweep_compact_CFLAGS = $(CFLAGS_COMMON) -DGC_MARK_SWEEP_COMPACT
-yog_mark_sweep_compact_LDFLAGS = $(LDFLAGS_COMMON)
+yog_mark_sweep_compact_LDFLAGS = $(LDFLAGS_COMMON) @LDFLAGS_MARK_SWEEP_COMPACT@
 yog_bdw_SOURCES = $(COMMON_SOURCES) gc/bdw.c
 yog_bdw_CFLAGS = $(CFLAGS_COMMON) -DGC_BDW -DGC_PTHREADS
-yog_bdw_LDFLAGS = $(LDFLAGS_COMMON)
+yog_bdw_LDFLAGS = $(LDFLAGS_COMMON) @LDFLAGS_BDW@
 yog_bdw_LDADD = $(BDWGC_DIR)/.libs/libgc.a
 yog_generational_SOURCES = $(COMMON_SOURCES) gc/generational.c gc/copying.c \
 			   gc/mark-sweep-compact.c
 yog_generational_CFLAGS = $(CFLAGS_COMMON) -DGC_GENERATIONAL
-yog_generational_LDFLAGS = $(LDFLAGS_COMMON)
+yog_generational_LDFLAGS = $(LDFLAGS_COMMON) @LDFLAGS_GENERATIONAL@
 miniyog_SOURCES = $(yog_copying_SOURCES)
 miniyog_CFLAGS = $(yog_copying_CFLAGS) -DMINIYOG
-miniyog_LDFLAGS = $(yog_copying_LDFLAGS)
+miniyog_LDFLAGS = $(LDFLAGS_COMMON) @LDFLAGS_MINIYOG@
 
 INSTS_DEF = insts.def
 INST_PY = $(ROOT_DIR)/tools/inst.py
