--- a/.gitignore
+++ b/.gitignore
@@ -231,6 +231,8 @@ src/.deps/
 src/Makefile.in
 src/array.inc
 src/builtins.inc
+src/builtins_unix.inc
+src/builtins_win.inc
 src/code.inc
 src/compile.inc
 src/dict.inc
