--- a/Makefile.in
+++ b/Makefile.in
@@ -66,7 +66,7 @@ test test-installed test-copying test-mark-sweep test-mark-sweep-compact test-bd
 	cd tests && $(MAKE) $@
 
 am--refresh:
-	@:
+	automake
 
 install-vim:
 	mkdir -p $(SYNTAX_DIR)
@@ -91,7 +91,10 @@ Makefile: Makefile.in config.status
 config.status: configure
 
 configure: configure.ac
-	autoconf
+	aclocal && autoconf
+
+include/yog/config.h.in: configure.ac
+	autoheader
 
 installer:
 	iscc installer.iss
