--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@
 *.la
 *.lib
 *.lo
+*.loT
 *.log
 *.msi
 *.ncb
@@ -26,25 +27,20 @@
 *.wixpdb
 *.zip
 *~
+./Makefile.in
 .deps
 .ditz-config
 .ditz-plugins
 .gdb_history
+.libs
 Debug
 Makefile
-Makefile.in
 Release
 aclocal.m4
 autom4te.cache
-bdwgc/.deps/
 bdwgc/.dirstamp
-bdwgc/.libs/
 bdwgc/bdw-gc.pc
-bdwgc/cord/.deps/
 bdwgc/cord/.dirstamp
-bdwgc/libatomic_ops-1.2/src/.deps/
-bdwgc/libatomic_ops-1.2/tests/.deps/
-bdwgc/tests/.deps/
 config.h
 config.h.in
 config.log
@@ -56,7 +52,7 @@ configure.scan
 core
 core.*
 doc/Makefile
-ext/.deps/
+ext/Makefile.in
 ext/wx/wxWidgets/.pch/
 ext/wx/wxWidgets/bk-deps
 ext/wx/wxWidgets/bk-make-pch
@@ -65,7 +61,6 @@ ext/wx/wxWidgets/lib/wx/
 ext/wx/wxWidgets/utils/wxrc/wxrc
 ext/wx/wxWidgets/wx-config
 gmon.out
-gmp/.libs/
 gmp/config.m4
 gmp/demos/calc/calc-config.h
 gmp/demos/calc/calc.c
@@ -82,8 +77,6 @@ gmp/gmp-mparam.h
 gmp/gmp.h
 gmp/mp.h
 gmp/mp_bases.h
-gmp/mpf/.libs/
-gmp/mpn/.libs/
 gmp/mpn/add.c
 gmp/mpn/add_1.c
 gmp/mpn/add_n.asm
@@ -193,11 +186,7 @@ gmp/mpn/toom_interpolate_5pts.c
 gmp/mpn/toom_interpolate_7pts.c
 gmp/mpn/udiv.asm
 gmp/mpn/umul.asm
-gmp/mpq/.libs/
-gmp/mpz/.libs/
 gmp/mpz/fac_ui.h
-gmp/printf/.libs/
-gmp/scanf/.libs/
 gmp/tune/sqr_basecase.c
 html
 include/yog/inst.h
@@ -205,11 +194,7 @@ include/yog/opcodes.h
 include/yog/token.h
 installer.iss
 libtool
-onig/.deps/
-onig/.libs/
 onig/onig-config
-onig/sample/.deps/
-onig/sample/.libs/
 onig/sample/crnl
 onig/sample/encode
 onig/sample/listcap
@@ -220,15 +205,6 @@ onig/sample/sql
 onig/sample/syntax
 parser.output
 pthreads-w32/libpthreadGC2.stamp
-sigsegv/src/.libs/
-sigsegv/termbold
-sigsegv/termnorm
-sigsegv/tests/sigsegv1
-sigsegv/tests/sigsegv2
-sigsegv/tests/sigsegv3
-sigsegv/tests/stackoverflow1
-sigsegv/tests/stackoverflow2
-src/.deps/
 src/Makefile.in
 src/array.inc
 src/builtins.inc
@@ -258,7 +234,6 @@ tests/test_package4.ilk
 tests/test_package5.ilk
 tests/test_package6.ilk
 tests/test_write0.tmp
-tools/lemon/.deps/
 tools/lemon/lemon
 tools/swig/CCache/ccache-swig
 tools/swig/Lib/swigwarn.swg
