Changed Makefile's targets which conflict default automake targets.

--- a/Makefile.am
+++ b/Makefile.am
@@ -27,10 +27,10 @@ install:
 		(cd $$d && $(MAKE) $@) \
 	done
 
-dist:
+pkg:
 	tools/dist $(ARCHIVE)
 
-distcheck:
+pkgcheck:
 	tools/distcheck $(ARCHIVE)
 
 installer: installer.iss
