Changed package making process for 0.0.4.

--- a/Makefile.am
+++ b/Makefile.am
@@ -28,7 +28,7 @@ install:
 	done
 
 pkg:
-	tools/dist $(ARCHIVE)
+	tools/dist --python=$(PYTHON) $(ARCHIVE)
 
 pkgcheck:
 	tools/distcheck $(ARCHIVE)
