--- a/issues/project.yaml
+++ b/issues/project.yaml
@@ -50,8 +50,8 @@ releases:
     - ""
 - !ditz.rubyforge.org,2008-03-06/release 
   name: 0.0.4
-  status: :unreleased
-  release_time: 
+  status: :released
+  release_time: 2010-03-04 13:05:59.324888 Z
   log_events: 
   - - 2009-11-07 17:52:44.836037 Z
     - Sumi Tomohiko <SumiTomohiko@neko-daisuki.ddo.jp>
@@ -60,3 +60,7 @@ releases:
       Objectives:
       1. Improve GC
       2. Performance tuning
+  - - 2010-03-04 13:05:59.324925 Z
+    - Sumi Tomohiko <SumiTomohiko@neko-daisuki.ddo.jp>
+    - released
+    - ""
