--- a/.gitignore
+++ b/.gitignore
@@ -236,7 +236,18 @@ tests/test_package6.ilk
 tests/test_write0.tmp
 tools/lemon/lemon
 tools/swig/CCache/ccache-swig
+tools/swig/Lib/ocaml/swigp4.ml
 tools/swig/Lib/swigwarn.swg
+tools/swig/Source/Include/swigconfig.h
+tools/swig/Source/Include/swigconfig.h.in
+tools/swig/Source/Makefile.in
 tools/swig/Source/eswig
+tools/swig/Tools/config/compile
+tools/swig/Tools/config/config.guess
+tools/swig/Tools/config/config.sub
+tools/swig/Tools/config/depcomp
+tools/swig/Tools/config/install-sh
+tools/swig/Tools/config/missing
+tools/swig/Tools/config/ylwrap
 tools/swig/swig
 vgcore.*
