Changed Makefile and configure to have wxWidget's library name.

--- a/configure.ac
+++ b/configure.ac
@@ -187,6 +187,8 @@ AC_CONFIG_FILES([Makefile src/Makefile tools/lemon/Makefile tests/Makefile
                  ext/Makefile lib/Makefile doc/Makefile installer.nsi
                  ext/concurrent/Makefile ext/wx/Makefile])
 
+WX_TYPE="gtk2"
+
 AC_CANONICAL_HOST
 case "${host}" in
 *-openbsd*)
@@ -207,6 +209,7 @@ case "${host}" in
     BIN_PROGRAMS="${BIN_PROGRAMS} yog-copying\$(EXEEXT) miniyog\$(EXEEXT)"
     SOEXT=".dll"
     IMPORT_LIB="\$(top_srcdir)/src/yog-copying.lib"
+    WX_TYPE="msw"
     ;;
 *)
     case "${host}" in
@@ -241,6 +244,7 @@ AC_SUBST(LIBS)
 AC_SUBST(SOEXT)
 AC_SUBST(IMPORT_LIB)
 AC_SUBST(EXT_SUBDIRS)
+AC_SUBST(WX_TYPE)
 
 AC_CONFIG_SUBDIRS([onig
                    gmp])
