--- a/ext/wx/Makefile.in
+++ b/ext/wx/Makefile.in
@@ -3,16 +3,36 @@ top_srcdir = @top_srcdir@
 CFLAGS = @CFLAGS@
 CC = @CC@
 SOEXT = @SOEXT@
-WX_TYPE = @WX_TYPE@
-A = wxWidgets/lib/libwx_$(WX_TYPE)d-2.8.a
-SO = $(top_srcdir)/ext/wx$(SOEXT)
+EXT_DIR = $(top_srcdir)/ext
+SO = $(EXT_DIR)/_wx$(SOEXT)
+YG = $(EXT_DIR)/wx.yg
+SWIG_DIR = $(top_srcdir)/tools/swig
+SWIG = $(SWIG_DIR)/swig
+WX_DIR = wxWidgets
+WX_CONFIG = $(WX_DIR)/wx-config
+WX_BIN = $(WX_DIR)/lib/lib`$(WX_CONFIG) --basename`-2.8.a
 
-all: $(SO)
+all: $(SO) $(YG)
 
-$(SO): wx.c $(A)
-	$(CC) -o $@ -shared $(CFLAGS) -I$(top_srcdir)/include wx.c $(A)
+clean:
+	rm -f $(SO) $(YG) wx_wrap.o
 
-$(A): wxWidgets/include/wx/config.h
+$(YG): wx.yg
+	cp wx.yg $@
+
+$(SO): wx_wrap.o $(WX_BIN)
+	$(CC) -o $@ -shared `$(WX_CONFIG) --libs` wx_wrap.o $(WX_BIN)
+
+wx_wrap.o: wx_wrap.cxx
+	$(CC) `$(WX_CONFIG) --unicode=no --static --cppflags` -I$(top_srcdir)/include -O2 -Wall -g -c -DSWIGRUNTIME_DEBUG -o $@ wx_wrap.cxx
+
+$(WX_BIN): $(WX_DIR)/include/wx/config.h
 	cd wxWidgets && make
+
+wx.yg wx_wrap.cxx: wx.i
+	$(SWIG) -c++ -yog -I$(SWIG_DIR)/Lib/yog wx.i
+
+Makefile: Makefile.in
+	cd $(top_srcdir) && ./config.status ext/wx/$@
 
 # vim: tabstop=8 shiftwidth=8 noexpandtab
