Arranged some files for wxWidgets to work in Windows.

--- a/.gitignore
+++ b/.gitignore
@@ -53,13 +53,17 @@ core
 core.*
 doc/Makefile
 ext/Makefile.in
+ext/wx.yg
+ext/wx/wx.yg
 ext/wx/wxWidgets/.pch/
 ext/wx/wxWidgets/bk-deps
 ext/wx/wxWidgets/bk-make-pch
 ext/wx/wxWidgets/configarg.cache
 ext/wx/wxWidgets/lib/wx/
+ext/wx/wxWidgets/src/expat/expat_config.h
 ext/wx/wxWidgets/utils/wxrc/wxrc
 ext/wx/wxWidgets/wx-config
+ext/wx/wx_wrap.cxx
 gmon.out
 gmp/config.m4
 gmp/demos/calc/calc-config.h
